--- a/infra/mysql/Dockerfile
+++ b/infra/mysql/Dockerfile
@@ -1,6 +1,6 @@
 FROM mysql:8.0
 
-ENV MYSQL_DATABASE=Laravel \
+ENV MYSQL_DATABASE=PaymentManager \
   MYSQL_USER=phper \
   MYSQL_PASSWORD=secret \
   MYSQL_ROOT_PASSWORD=secret \
